Fixed bugs: + Optional incremental situations + Alignment of table view headers + letter cases

--- a/AdminUI/src/userInterface/stylesheets/CenterLightMode.css
+++ b/AdminUI/src/userInterface/stylesheets/CenterLightMode.css
@@ -21,7 +21,7 @@
 }
 
 .table-view .column-header .label{
-    -fx-alignment: CENTER_LEFT;
+    -fx-alignment: CENTER;
     -fx-font-weight: none;
 }
 
